[project]
name = "graph-bot"
version = "0.1.0"
description = ""
authors = [{ name = "umair", email = "umairapi1995@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6,<46.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry-specific settings (PEP 621 keeps these under [tool.poetry])
[tool.poetry]
packages = [{ include = "src" }]
